p2/confs/deployment.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: hello-kubernetes

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
  namespace: hello-kubernetes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - name: http
          containerPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
  namespace: hello-kubernetes
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - name: http
          containerPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
  namespace: hello-kubernetes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - name: http
          containerPort: 80
