p2/confs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-one
  namespace: hello-kubernetes
spec:
  selector:
    app: app-one
  ports:
    - name: http
      port: 80
      targetPort: http

---

apiVersion: v1 
kind: Service
metadata:
  name: app-two
  namespace: hello-kubernetes
spec:
  selector:
    app: app-two
  ports:
    - name: http
      port: 80
      targetPort: http

---

apiVersion: v1 
kind: Service
metadata:
  name: app-three
  namespace: hello-kubernetes
spec:
  selector:
    app: app-three
  ports:
    - name: http
      port: 80
      targetPort: http
